xray-demo/kafka/kafdrop-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: kafdrop
  namespace: xray-demo
  annotations:
    argocd.argoproj.io/sync-wave: "3"
spec:
  subdomain: ''
  to:
    kind: Service
    name: kafdrop
    weight: 100
  port:
    targetPort: 9000
  wildcardPolicy: None
